--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div class="row d-flex align-items-center">
                         <div class="col-xl-8 col-lg-6 col-md-8 ">
                             <div class="hero__caption">
-                                <span data-animation="fadeInLeft" data-delay=".3s">Date: will Announce </span>
+                                <span data-animation="fadeInLeft" data-delay=".3s">Date: October 29 2020 </span>
                                 <h1 data-animation="fadeInLeft" data-delay=".5s" data-duration="2000ms">Anoop<strong> & </strong> Devika</h1>
                                 <p data-animation="fadeInLeft" data-delay=".9s">will get married</p>
                             </div>
@@ -101,7 +101,7 @@
                     <div class="row d-flex align-items-center">
                         <div class="col-xl-8 col-lg-6 col-md-8 ">
                             <div class="hero__caption">
-                                <span data-animation="fadeInLeft" data-delay=".3s">Date: will Announce</span>
+                                <span data-animation="fadeInLeft" data-delay=".3s">Date:October 29 2020</span>
                                 <h1 data-animation="fadeInLeft" data-delay=".5s" data-duration="2000ms">Anoop<strong> & </strong> Devika</h1>
                                 <p data-animation="fadeInLeft" data-delay=".9s">will get married</p>
                             </div>
@@ -187,10 +187,10 @@
                         </div>
                         <div class="card-bottom">
                             <ul>
-                                <li><i class="fas fa-calendar-alt"></i>April 20, 2016</li>
-                                <li><i class="far fa-clock"></i>5:30 PM</li>
-                                <li><i class="fas fa-map-marker-alt"></i>The Mayflower Hotel</li>
-                                <li>1127 Connecticut Avenue,NY</li>
+                                <li><i class="fas fa-calendar-alt"></i>October 29, 2020</li>
+                                <li><i class="far fa-clock"></i>11.30 AM</li>
+                                <li><i class="fas fa-map-marker-alt"></i>Kadappattoor Mahadeva Temple</li>
+                              
                                 <!-- <li><i class="far fa-map"></i> Check out the map</li> -->
                             </ul>
                         </div>
@@ -226,7 +226,7 @@
     <!--? Count Down Start -->
     <script>
         // The data/time we want to countdown to
-        var countDownDate = new Date("Oct 29, 2020 16:37:52").getTime();
+        var countDownDate = new Date("Oct 29, 2020 11:30:00").getTime();
     
         // Run myfunc every second
         var myfunc = setInterval(function() {
