--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="single-card text-center mb-30">
                             <div class="card-top">
-                                <span class="flaticon-chart"></span>
+                                <span><img src="./assets/wedding-arch.png" style="width: 1em;" alt=""></span>
+
                                 <h4>The Ceremony</h4>
                             </div>
                             <div class="card-bottom">
@@ -190,14 +191,14 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="single-card active text-center mb-30">
                             <div class="card-top">
-                                <span class="flaticon-project"></span>
-                                <h4>The Wedding</h4>
+                                <span><img src="./assets/wedding-rings.png" style="width: 1em;" alt=""></span>
+                                <h4>കല്യാണം</h4>
                             </div>
                             <div class="card-bottom">
                                 <ul>
-                                    <li><i class="fas fa-calendar-alt"></i>October 29, 2020</li>
-                                    <li><i class="far fa-clock"></i>11.30 AM</li>
-                                    <li><i class="fas fa-map-marker-alt"></i>Kadappattoor Mahadeva Temple</li>
+                                    <li><i class="fas fa-calendar-alt"></i>ഒക്‌റ്റോബര്‍ 29, 2020</li>
+                                    <li><i class="far fa-clock"></i>രാവിലെ 11.30 മദ്ധ്യേ 12.30 </li>
+                                    <li><i class="fas fa-map-marker-alt"></i>കടപ്പട്ടൂർ മഹാദേവ ക്ഷേത്രം</li>
 
                                     <!-- <li><i class="far fa-map"></i> Check out the map</li> -->
                                 </ul>
@@ -316,7 +317,7 @@
                             </div>
                             <div class="thumb-content-box">
                                 <div class="thumb-content">
-                                    <h3>image 01</h3>
+                                    <h3>വധുവും വരനും</h3>
                                     <a href="assets/img/gallery/gallery1.jpg" class="menorie-icon"> <i
                                             class="ti-plus"></i></a>
                                 </div>
@@ -329,7 +330,7 @@
                             </div>
                             <div class="thumb-content-box">
                                 <div class="thumb-content">
-                                    <h3>image 02</h3>
+                                    <h3>വധു</h3>
                                     <a href="assets/img/gallery/gallery2.jpg" class="menorie-icon"> <i
                                             class="ti-plus"></i></a>
                                 </div>
@@ -342,7 +343,7 @@
                             </div>
                             <div class="thumb-content-box">
                                 <div class="thumb-content">
-                                    <h3>image 03</h3>
+                                    <h3>ഞങ്ങള്‍</h3>
                                     <a href="assets/img/gallery/gallery3.jpg" class="menorie-icon"> <i
                                             class="ti-plus"></i></a>
                                 </div>
@@ -355,7 +356,7 @@
                             </div>
                             <div class="thumb-content-box">
                                 <div class="thumb-content">
-                                    <h3>image 04</h3>
+                                    <h3>വരന്‍</h3>
                                     <a href="assets/img/gallery/gallery4.jpg" class="menorie-icon"> <i
                                             class="ti-plus"></i></a>
                                 </div>
