--- a/index.html
+++ b/index.html
@@ -136,9 +136,13 @@
                             style="background-image: url(assets/img/gallery/story2.jpg);">
                             <div class="story-details">
                                 <h4>The Proposal</h4>
-                                <p>“A successful marriage requires falling in love many times, always with the same
-                                    person.”</p>
-                                <p>Proin at sapien ipsum. Aenean placerat, quam ac tempor.</p>
+                                <p>പുതു ജീവിതത്തിലേക്ക് പ്രവേശിക്കുന്ന നിങ്ങൾക്കു
+                                    സർവേശ്വരൻ എല്ലാവിധ ഐശ്വര്യവും
+                                    സന്തോഷവും നൽകി അനുഗ്രഹിക്കട്ടെ
+                                    ഒരായിരം വിവാഹ ആശംസകൾ.”</p>
+                                <p>നിങ്ങളുടെ ജീവിതത്തിൽ
+                                    സർവേശ്വരന്റെ അനുഗ്രഹം ഉണ്ടാക്കട്ടെ
+                                    വിവാഹ മംഗളാശംസകൾ</p>
                             </div>
                         </div>
                     </div>
